test/ll_parser_definition_test.test
EXPRESSION: SHORT_OBJ: line 11:
define bracket "["
^^^^^^^^^^^^^^^^^^
ERROR: too few mark-names in line 11:
define bracket "["
^^^^^^^^^^^^^^^^^^
